# osfi-1

./: CMakeLists.txt  README.md  absorption2.csv  convert.py  v.csv
src/: convert-to-ldr.cpp  gen-hdr.cpp  test.cpp
src/lib/: Image.cpp  Image.hpp  Spectrum.cpp  Spectrum.hpp
